# k8sexample

./: BUILD  Dockerfile  WORKSPACE  bazel-bin  bazel-k8Example  bazel-out  bazel-testlogs  deps.bzl  go.mod  go.sum  k8example.yaml  k8exampleHelmChart-0.1.0.tgz  main.go
grpcClient/: BUILD.bazel  grpcClient.go
grpcserverservice/: BUILD.bazel  grpcserverservice.go  grpcserverservice_test.go
k8examplehelmchart/: Chart.yaml  values.yaml
k8examplehelmchart/templates/: NOTES.txt  _helpers.tpl  clusterRole.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
k8examplehelmchart/templates/tests/: test-connection.yaml
k8grpc/: BUILD.bazel  k8grpc.pb.go  k8grpc.proto  k8grpc_grpc.pb.go
k8service/: BUILD.bazel  coverage.out  k8service.go  k8service_test.go
restServices/: BUILD.bazel  restServices.go  restServices_test.go
