load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "k8service",
    srcs = ["k8service.go"],
    importpath = "github.com/pathak107/k8Example/k8service",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/clientcmd",
    ],
)

go_test(
    name = "k8service_test",
    srcs = ["k8service_test.go"],
    embed = [":k8service"],
    deps = [
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes/fake",
    ],
)
